added phone link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="right_part">
           <div class="content">
             <img class="icon" src="images/phone.svg" alt="Phone icon">
-            <p class="phone_number title-medium">32-44-30</p>
+            <a href="tel:+73919324430" class="phone_number title-medium">32-44-30</a>
           </div>
         </div>
 
