new teachers photo and intro logo opacity

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=10%, initial-scale=1">
 
   <title>Школа иностранных языков the Friends</title>
   <link rel="stylesheet" href="styles/styles.css" />
@@ -141,26 +141,26 @@
     
     <div class="teacher">
       <div>
-        <img src="images/Elizabeth.jpg" alt="Елизавета Игоревна" class="teacher-foto">
+        <img src="images/Nelli.jpg" alt="Нелли Игоревна" class="teacher-foto">
       </div>
-      <p class="title-small">Елизавета Игоревна</p>
-      <p class="text-medium">Преподаватель высшего класса</p>
+      <p class="title-small">Нелли Игоревна</p>
+      <p class="text-medium">Научит вашего ребенка азам языка</p>
     </div>
 
     <div class="teacher">
       <div>
-        <img src="images/marykabalina.jpg" alt="Мария Александровна" class="teacher-foto">
+        <img src="images/Larisa.jpg" alt="Лариса Александровна" class="teacher-foto">
       </div>
-      <p class="title-small">Мария Александровна</p>
-      <p class="text-medium">Детский преподаватель</p>
+      <p class="title-small">Лариса Александровна</p>
+      <p class="text-medium">Вся грамматика простым языком</p>
     </div>
 
     <div class="teacher">
       <div>
-        <img src="images/Boris.jpg" alt="Борис Павлович" class="teacher-foto">
+        <img src="images/Victoria.jpg" alt="Виктория Викторовна" class="teacher-foto">
       </div>
-      <p class="title-small">Борис Павлович</p>
-      <p class="text-medium">Подготовка к IELTS TOEFL ЕГЭ</p>
+      <p class="title-small">Виктория Викторовна</p>
+      <p class="text-medium">Подготовка к ЕГЭ IELTS TOEFL</p>
     </div>
   </div>
 
