--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=10%, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Школа иностранных языков the Friends</title>
   <link rel="stylesheet" href="styles/styles.css" />
@@ -32,7 +32,7 @@
         <div class="right_part">
           <div class="content">
             <img class="icon" src="images/phone.svg" alt="Phone icon">
-            <a href="tel:+73919324430" class="phone_number title-medium">32-44-30</a>
+            <p class="phone_number title-medium">32-44-30</p>
           </div>
         </div>
 
@@ -135,10 +135,9 @@
     </div>
   </div>
 
-  <div class="title-large center-align">Наши предователи:</div>
+  <div class="title-large center-align" id="teachers">Наши предователи:</div>
 
-  <div class="teachers" id="teachers">
-    
+  <div class="teachers">
     <div class="teacher">
       <div>
         <img src="images/Nelli.jpg" alt="Нелли Игоревна" class="teacher-foto">
