--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 
   <div class="intro">
     <div class="intro-content">
-      <h1 class="intro-item title-large">Раз и навсегда объясняем времена!</h1>
-      <h2 class="intro-item title-medium">В доступной для понимания форме обучения!</h2>
+      <h1 class="intro-item title-huge">Раз и навсегда объясняем времена!</h1>
+      <h2 class="intro-item title-large">В доступной для понимания форме обучения!</h2>
 
       <div class="intro-item button">
         <button class="button button-green"><h3>Записаться!</h3></button>
       </div>
 
-      <p class="intro-item-small title-small">Не ждите, когда путёвка уже будет куплена!</p>
+      <p class="intro-item-small title-medium">Не ждите, когда путёвка уже будет куплена!</p>
     </div>
   </div>
 
@@ -99,7 +99,7 @@
   <div class="courses" id="courses">
     <p class="title-large center-align">Тут Вы узнаете про наши курсы:</p>
     <div class="course">
-      <p class="title-large">Английский для малышей</p>
+      <p class="title-large center-align">Английский для малышей</p>
       <p class="text-lead">Двухуровневый курс для дошкольников 5-6 лет. Дети изучают алфавит и звуки, учатся писать и считать на английском языке. Материал курса позволяет создать первичный лексический запас и освоить базовые структуры. Все это достигается с помощью увлекательных заданий, запоминающихся песен и стихов, веселых игр.
         Длительность одного уровня курса: от 7 до 9 месяцев
         Интенсивность: 2 раза в неделю
@@ -107,7 +107,7 @@
     </div>
 
     <div class="course">
-      <p class="title-large">ЦЕЛЫХ ТРИ КУРСА ДЛЯ ШКОЛЬНИКОВ</p>
+      <p class="title-large center-align">ЦЕЛЫХ ТРИ КУРСА ДЛЯ ШКОЛЬНИКОВ</p>
       <p class="text-lead">Курс Go Getter издательства Pearson для детей от 9 до 13 лет, разработан в партнерстве с BBC. Данный курс включает в себя 4 уровня (Beginner-Intermediate) и наполнен аутентичными материалами. Кроме богатой лексической и грамматической составляющих, ребята приобретают знания о культуре разных стран, учатся сотрудничать в рамках проектной работы и развивают коммуникативные навыки. Отдельно следует отметить видео-материалы данного курса: неизбитые темы и интересная подача.
         Длительность одного уровня курса: от 9 до 12 месяцев
         Интенсивность: 2 раза в неделю
@@ -127,7 +127,7 @@
     </div>
 
     <div class="course">
-      <p class="title-large">А также английский для взрослых</p>
+      <p class="title-large center-align">А также английский для взрослых</p>
       <p class="text-lead">Курс New Cutting Edge издательства Pearson – это позитивный коммуникативный подход, тщательная структура, прекрасный набор лексических и грамматических тем. Курс позволяет развивать все навыки, совершенствуя их от уровня к уровню. Сопровождается прекрасными аудио- и видео-материалами, а так же цифровыми компонентами, позволяющими изучать язык с помощью цифровых инструментов. Включает в себя 5 уровней Beginner – Advanced.
         Длительность одного уровня курса: от 9 до 15 месяцев
         Интенсивность: 2 раза в неделю
