parallax added and colors fixed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
   <script type="text/javascript" charset="utf-8" src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
   <script type="text/javascript" charset="utf-8" src="courses.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="parallax.js-1.5.0/parallax.min.js"></script>
 
   <title>Школа иностранных языков the Friends</title>
   <link rel="stylesheet" href="styles/styles.css" />
@@ -27,7 +29,7 @@
         <div class="left-part">
           <div class="content">
             <img class="header-logo" src="images/main_logo.jpg" alt="Маленький логотип">
-            <a class="text-medium top-links" href="#main">Главная</a>
+            <a class="text-medium top-links" href="#intro">Главная</a>
             <a class="text-medium top-links" href="#courses">Курсы</a>
             <a class="text-medium top-links" href="#teachers">Преподаватели</a>
             <a class="text-medium top-links" href="#offers">Стоимость</a>
@@ -50,7 +52,7 @@
 
   <div class="main" id="main">
 
-    <div class="intro">
+    <div class="intro" id="intro" data-parallax="scroll" data-image-src="images/intro.jpg">
       <div class="intro-content">
         <h1 class="intro-item title-huge">Раз и навсегда объясняем времена!</h1>
         <h2 class="intro-item title-large">В доступной для понимания форме обучения!</h2>
@@ -204,13 +206,13 @@
           <h3>Групповые занятия, 8 раз в месяц</h3>
           <h3>Группа до 10 человек</h3>
           <h2 class="title-medium">4900&nbsp;рублей</h2>
-          <p>Знания - сила!</p>
+          <p>Знание - сила!</p>
         </div>
       </div>
     </div>
 
     <div class="footer-item button">
-      <button class="bottom-button button-coral">
+      <button class="bottom-button button-green">
         <h3>Записаться!</h3>
       </button>
     </div>
