tel and mail links + little maintenance as usual

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="right-part">
           <div class="content">
             <img class="icon" src="images/phone.svg" alt="Phone icon">
-            <p class="phone-number title-medium">32-44-30</p>
+            <a href="tel:+73919324430" class="phone-number title-medium">32-44-30</a>
           </div>
         </div>
 
@@ -90,7 +90,7 @@
           <img src="images/graph.svg" alt="Вложения в себя">
         </div>
 
-        <p class="title-medium" onclick="alert('Сюрприз-скидка 30% на первый месяц обучения! Промокод: СЮРПРИЗ ОТ ДРУГА')">Вложения<br>в себя</p>
+        <p class="title-medium" onclick="alert('Сюрприз-скидка 30% на первый месяц обучения! Промокод: &#8220;СЮРПРИЗ ОТ ДРУГА&#8220;')">Вложения<br>в себя</p>
         <p class="text-lead">Самые разумные инвестиции</p>
       </div>
 
@@ -168,15 +168,15 @@
         <div>
           <img src="images/Nelli.jpg" alt="Нелли Игоревна" class="teacher-foto">
         </div>
-        <p class="title-small">Нелли Игоревна</p>
+        <p class="title-small">Нелли Гасановна</p>
         <p class="text-medium">Научит вашего ребенка азам языка</p>
       </div>
 
       <div class="teacher">
         <div>
-          <img src="images/Victoria.jpg" alt="Виктория Викторовна" class="teacher-foto">
+          <img src="images/Veronica.jpg" alt="Вероника Алексеевна" class="teacher-foto">
         </div>
-        <p class="title-small">Виктория Викторовна</p>
+        <p class="title-small">Вероника Алексеевна</p>
         <p class="text-medium">Подготовка к ЕГЭ IELTS TOEFL</p>
       </div>
 
@@ -184,7 +184,7 @@
         <div>
           <img src="images/Larisa.jpg" alt="Лариса Александровна" class="teacher-foto">
         </div>
-        <p class="title-small">Лариса Александровна</p>
+        <p class="title-small">Лариса Петровна</p>
         <p class="text-medium">Вся грамматика простым языком</p>
       </div>
 
@@ -222,10 +222,10 @@
         <div class="footer-left-part">Выбирая обучение английскому языку в нашей школе вы открываете для себя весь мир!
         </div>
         <div>
-          <p>Школа английского языка the Friends</p>
-          <p>г. Норильск, ул. Б. Хмельницкого, д. 62</p>
-          <p>32-44-30</p>
-          <p>norilskfriends@gmail.com</p>
+          <p>Школа английского языка &#8220;the Friends&#8221;</p>
+          <p>г. Норильск, ул. Б. Хмельницкого, д. 16, оф. 66</p>
+          <a href="tel:+73919324430" class="footer-contacts text-lead">32-44-30</a><br>
+          <a href="mailto:thefriends4u@yandex.ru" class="footer-contacts">thefriends4u@yandex.ru</a>
         </div>
       </div>
     </footer>
