slide from navigation links added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <script type="text/javascript" charset="utf-8" src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
   <script type="text/javascript" charset="utf-8" src="courses.js"></script>
+  <script type="text/javascript" charset="utf-8" src="header.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="parallax.js-1.5.0/parallax.min.js"></script>
 
